updated footer colors

--- a/week02/styles/media-query.css
+++ b/week02/styles/media-query.css
@@ -37,3 +37,9 @@ section{
     background-color: var(--sec-cor);
     color: var(--ter-cor)
 }
+
+
+footer{
+    background-color: var(--sec-cor);
+    color: var(--ter-cor);
+}
