--- a/styles/temples-large.css
+++ b/styles/temples-large.css
@@ -22,7 +22,7 @@
         justify-content: center;
         align-items: center;
     }
-    main h1{
+    main h1, main h2{
         grid-column: 1/-1;
     }
     figure{
