--- a/styles/temples.css
+++ b/styles/temples.css
@@ -67,10 +67,13 @@ nav{
 #menu::after{
     content:"☰";
     width: 100%;
+    height: 100%;
+    line-height: 100%;
     border: solid 1px var(--base-cor);
     margin: 0.25rem;
     padding: 0.5rem;
-    min-width: 500px;
+    text-align: center;
+    width: 5rem;
     text-overflow: clip;
 }
 
