added css for img.

--- a/styles/place.css
+++ b/styles/place.css
@@ -110,10 +110,10 @@ td{
         height: auto;
     }
     #weather-symbol{
-        display:hidden;
+        display:none;
     }
-    #weather-symbol::after{
-        content:"⛅";
+    #weather-title::after{
+        content:" ⛅";
         font-size: xx-large;
         margin: 0px;
     }
