--- a/week05/css/small.css
+++ b/week05/css/small.css
@@ -56,3 +56,72 @@ footer {
     padding: .5rem 2%;
     text-align: center;
 }
+
+/* Form */
+
+.wf1 fieldset{
+    margin: 2rem 0;
+    border: 1px solid #eee;
+    border-radius: 6px;
+    padding: .5rem 2%;
+}
+
+.wf1 legend{
+    color: navy;
+    padding: 0 0.5rem;
+}
+
+.wf1 label{
+    display: block;
+    padding-top: 1rem;
+    color: red;
+    font-size: 0.9rem;
+}
+
+.wf1 div{
+    padding-top: 1rem;
+    color: navy;
+    font-size: 0.9rem;
+}
+
+.wf1 input[type="text"],
+.wf1 input[type="tel"],
+.wf1 input[type="email"],
+.wf1 input[type="url"],
+.wf1 input[type="date"],
+.wf1 select,
+.wf1 input[type="number"],
+.wf1 input[type="text"],
+.wf1 input[type="text"]{
+    background-color: pink;
+    display: block;
+    border: solid 1px grey; 
+    border-radius: 6px;
+    padding: 0.75rem;
+    width: 100%; 
+    max-width: 400px;
+}
+
+.wf1 input[type="radio"], .wf1 input[type="checkbox"]{
+    margin-right: 6px;
+}
+
+.wf1 input[type="submit"]{
+    border: none;
+    color: white;
+    background-color: green;
+    border-radius: 6px;
+    padding: 0.8rem;
+    width: 100%;
+    max-width: 400px;
+    margin: -1rem 2%  2rem 2%;
+    box-shadow: 1px 1px 4px grey;
+}
+
+.wf1 input:required{
+    border-left: 1rem solid red;
+}
+
+.wf1 input:required:valid{
+    border-left: 1rem solid greenyellow;
+}
