--- a/week05/css/small.css
+++ b/week05/css/small.css
@@ -100,6 +100,7 @@ footer {
     padding: 0.75rem;
     width: 100%; 
     max-width: 400px;
+    appearance: none;
 }
 
 .wf1 input[type="radio"], .wf1 input[type="checkbox"]{
