--- a/styles/form.css
+++ b/styles/form.css
@@ -87,6 +87,7 @@ form input[type="submit"]{
     width: 100%;
     /* max-width: 25rem; */
     box-shadow: 1px 1px 4px var(--dark-text);
+    text-shadow: 1px 1px var(--dark-text);
 }
 
 form input:required, select:invalid{
