--- a/styles/temples.css
+++ b/styles/temples.css
@@ -66,7 +66,7 @@ nav{
 
 #menu::after{
     content:"☰";
-    width: 100%;
+    width: 1rem;
     height: 100%;
     line-height: 100%;
     border: solid 1px var(--base-cor);
